--- a/index.css
+++ b/index.css
@@ -28,30 +28,90 @@ h1 {
 }
 
 /*NAVBAR*/
-.navbar {
-    background-color: #151516;
+nav {
+  margin-left: -9px;
+  width: 80%;
+  padding: 5px 0;
+}
+nav ul {
+  list-style: none;
+  text-align: left;
+}
+nav ul li {
+  display: inline-block;
+}
+nav ul li a {
+  display: block;
+  padding: 15px;
+  text-decoration: none;
+  color: #aaa;
+  font-weight: 800;
+  margin: 0 10px;
+}
+nav ul li a,
+nav ul li a:after,
+nav ul li a:before {
+  transition: all .5s;
+}
+nav ul li a:hover {
+  color: #555;
+}
+nav.fill ul li a {
+  position: relative;
+}
+nav.fill ul li a {
+  transition: all 2s;
+}
+
+nav.fill ul li a:after {
+  text-align: left;
+  content: '.';
+  margin: 0;
+  opacity: 0;
+}
+nav.fill ul li a:hover {
+  color: #fff;
+  z-index: 1;
+}
+nav.fill ul li a:hover:after {
+  z-index: -10;
+  animation: fill 1s forwards;
+  -webkit-animation: fill 1s forwards;
+  -moz-animation: fill 1s forwards;
+  opacity: 1;
+}
+
+nav.fill ul li a:after {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+  width: 0%;
+  content: '.';
+  color: transparent;
+  background: #aaa;
+  height: 1px;
+}
+
+@-webkit-keyframes fill {
+  0% {
+    width: 0%;
+    height: 1px;
+  }
+  50% {
     width: 100%;
+    height: 1px;
+  }
+  100% {
+    width: 100%;
+    height: 100%;
+    background: #333;
+  }
 }
 
-.navbar ul {
-    display: flex;
-    gap: 30px;
-    margin-top: 40px;
-    list-style-type: none;
-}
 
-.navbar ul a {
-    text-decoration: none;
-    color: #FCFCFC;
-}
 
-.navbar li a {
-    padding: 10px;
-}
-
-.navbar li a:hover {
-    background-color: #232323;
-}
 
 /*HOME*/
 .home {
@@ -218,9 +278,36 @@ h1 {
     margin-left: 98px;
     margin-top : -47px;
     border-radius: 50%;
-    border: 4px solid #232323;
+    border: 4px solid #232428;
 }
 
+
+.icons {
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    margin-top: 131px;
+    font-size: 20px;
+    gap: 10px;
+}
+  
+.icons .fa-brands {
+    transition: ease-in 0.2s;
+    background-color: #232323;
+    border-top: 1px solid rgb(0, 0, 0);
+    color: white;
+    padding: 10px;  
+    border-radius: 0px 0px 15px 15px;
+}
+  
+.icons .fa-brands:hover {
+    padding-top: 25px;
+}
+  
+.icons:hover:not(.fa-brands) .fa-brands {
+    transform: none;
+}
+/*.fa-brands:hover aşağı doğru uzasın*/
 
 /* Projects */
 #projects {
