--- a/index.css
+++ b/index.css
@@ -401,6 +401,7 @@ footer .fa-brands {
     color: white;
     padding: 10px;
     border-radius: 30px;
+    transition: ease-in 0.3s;
 }
 
 footer .fa-brands:hover {
@@ -413,3 +414,15 @@ a {
 }
 @import url('https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Caveat:wght@500;600;700&family=Indie+Flower&family=Kalam:wght@300;400;700&family=Permanent+Marker&family=Shadows+Into+Light&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=ABeeZee&family=Caveat&family=Fuzzy+Bubbles:wght@400;700&family=Inconsolata:wght@400;500&family=Indie+Flower&family=Roboto+Mono:wght@200;300;400&family=Roboto:wght@300;400&family=Vollkorn:wght@400;500&display=swap');
+
+/*Responsive*/
+@media only screen and (max-width: 620px) {
+    /* For mobile phones: */
+    /*Navbar 3 çizgi olcak*/
+    /*Profil fotorafı ortada olcak*/
+    /*.home .information kısmı ortada durcak*/
+    /*Projects kısmı düzeltilecek*/
+    /*.container {
+        background-color: red;
+    }*/
+}
