--- a/index.css
+++ b/index.css
@@ -261,7 +261,7 @@ nav.fill ul li a:after {
 }
 .banner {
     width: 100%;
-    height: 165px;
+    height: 180px;
 }
 
 .info #globalName {
@@ -290,14 +290,14 @@ nav.fill ul li a:after {
     justify-content: flex-end;
     padding: 6px;
 }
-.icons section{
+.icons div{
     display: flex;
-    width: 26px;
-    height: 26px;
-    margin-right: 105px;
+    width: 28px;
+    height: 28px;
+    margin-right: 115px;
 }
 .icons img {
-    background-color: #190F22;
+    background-color: #111214;
     padding: 5px;
 }
 
@@ -387,7 +387,7 @@ nav.fill ul li a:after {
 
 .social {
     display: grid;
-    font-size: 18px;
+    font-size: 16px;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(2, 1fr);
     gap: 10px;
@@ -395,16 +395,24 @@ nav.fill ul li a:after {
     margin-top: 10px;
     text-align: left;
 }
-.social a {
-    font-weight: 100;
-    color: rgb(233, 233, 233);
+.social span {
     border: 1px solid #80808085;
-    text-decoration: none;
     padding: 10px;
     transition: color .3s ease-in-out, box-shadow .3s ease-in-out;
+    border-radius: 10px;
+    font-weight: 100;
+    color: rgb(233, 233, 233);
+    text-decoration: none;
 }
 .social .fa-discord {
     font-size: 16px;
+}
+.social span a {
+    font-size: 10px;
+    font-weight: 100;
+    vertical-align: super;
+    float: right;
+    padding-left: 10px;
 }
 
 /* Projects */
