--- a/index.css
+++ b/index.css
@@ -196,10 +196,11 @@ nav.fill ul li a:after {
 }
 
 .aboutme p {
-    color: #C1C1C1;
+    color: #999999;
     padding-left: 50px;
     padding-right: 50px;
     font-size: 20px;
+    font-family: monospace;
 }
 
 /*Contact Me*/
@@ -355,6 +356,11 @@ nav.fill ul li a:after {
     flex-grow: 1;
     margin: 0px 5px 0px -23px;
 }
+@-moz-document url-prefix() {
+    #progress {
+        width: 100%;
+    }
+}
 #progress::-webkit-progress-value {
     background-color: #1DB954;
 }
@@ -440,6 +446,10 @@ nav.fill ul li a:after {
     border-radius: 10px;
     background-color: #232323;
     justify-content: center;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
 }
 
 .title {
@@ -456,7 +466,12 @@ nav.fill ul li a:after {
     text-align: left;
     font-size: 20px;
     font-family: 'Caveat', cursive;
+    margin-top: 5px;
 }
+#projects p {
+    margin-top: 0px;
+}
+
 
 #projects button {
     cursor: pointer;
